logs/Slang/generated/keywords/5.6.2--keyword_weak0.sv.log
name: keyword_weak0
description: The 'weak0' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_weak0.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_weak0.sv:8:8: error: expected declarator
    bit weak0;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_weak0.sv:8:9: error: expected member
    bit weak0;
        ^~~~~
